# nuc_modelling

./: .gitignore  README.md  basic_nuclear_structure.py  bertini_cascade.py  main.py  nuclear_constants.py  particle.py  particles_beams.py  pyproject.toml  radiation.py  requirements.txt
.github/workflows/: python.yml
data/: particles.json
docs/: basic_nuclear_structure.md  bertini_cascade.md  nuclear_constants.md  particle.md  radiation.md
tests/: __init__.py  test_bertini_cascade.py  test_main.py  test_particle.py  test_particles_beams.py  test_radiation.py
