[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nuc-modelling"
version = "0.1.0"
description = "Codes and tools around nuclear modelling, from simple hydrogen models to cascade simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
py-modules = [
    "basic_nuclear_structure",
    "bertini_cascade",
    "nuclear_constants",
    "particle",
    "particles_beams",
    "radiation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]
